Finish Splash Screen

--- a/style/splash.css
+++ b/style/splash.css
@@ -1,12 +1,14 @@
-#body{
-    background-color: black;
+@keyframes splash1{
+    0% {opacity: 0;}
+      30% {opacity: 1;}
+    70% {opacity: 1;}
+    100% {opacity: 0;}
 }
-#form{
-    height: 800px;
-    width: 800px;
-    border: solid white 10px;
+.imgs{
+    width: 790px;
+    height: 780px;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
+}
+#splash1{
+    animation: splash1 3s linear;
 }
