Revert "fixed overflow and gray page in github.io"
This reverts commit e5dd06482e9d864d3b7eb0f6a06ad5ae0d45c20f.

--- a/style/scene1.css
+++ b/style/scene1.css
@@ -2,7 +2,7 @@
     height:100px;
     width:650px;
     color:#ffffff; 
-    font-size:x-large;
+    font-size:20px;
     position: absolute;
     left: 50%;
     top: 50%;
