dialog box,cutscene 1

--- a/style/env.css
+++ b/style/env.css
@@ -18,3 +18,11 @@
     font-size: xx-large;
     color: white;
 }
+@keyframes onLoad{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+@keyframes offLoad{
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+}
