--- a/style/ui.css
+++ b/style/ui.css
@@ -26,6 +26,27 @@
 #box{
     visibility: hidden;
 }
+#font{
+    opacity: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+#dialog{
+    visibility: hidden;
+    width: 700px;
+    height: 200px;
+    position: absolute;
+    top: 550px;
+    left: 30px;
+    border: solid 10px white;
+    border-radius: 5px;
+    background-color: black;
+}
+.fontani{
+    animation: font 3s ease-in-out;
+}
 .box{
     width: 500px;
     height: 100px;
@@ -38,9 +59,18 @@
     line-height: 3;
     animation: box 5s ease-in-out;
 }
+.offLoad{
+    animation: offLoad 2s linear;
+}
 @keyframes box{
     0%{top: -120px;visibility: visible;}
     30%{top: 10px;visibility: visible;}
     70%{top: 10px;visibility: visible;}
     100%{top: -120px;visibility: visible;}
+}
+@keyframes font{
+    0% {opacity: 0;}
+    25% {opacity: 1;}
+    75% {opacity: 1;}
+    100% {opacity: 0;}
 }
