--- a/style/puzzle0.css
+++ b/style/puzzle0.css
@@ -1,5 +1,4 @@
 #caption{
-    top:100px;
     left:100px;
     position:sticky;
 }
@@ -8,39 +7,39 @@
     width:60px;
     border:solid white 5px;
     position:absolute;
-    left:50%;
+    left:230px;
     top:50%;
-    transform:translateX(-200%) translateY(-50%);
+    transform:translateY(-50%);
 }
 #ans2{
     height:50px;
     width:60px;
     border:solid white 5px;
     position:absolute;
-    left:50%;
+    left: 330px;
     top:50%;
-    transform:translateX(-50%) translateY(-50%);
+    transform:translateY(-50%);
 }
 #ans3{
     height:50px;
     width:60px;
     border:solid white 5px;
     position:absolute;
-    left:50%;
+    left:430px;
     top:50%;
-    transform:translateX(100%) translateY(-50%);
+    transform:translateY(-50%);
 }
 #button{
-    left:50%;
+    left:330px;
     top:50%;
     position:absolute;
-    transform:translateX(-50%) translateY(200%);
+    transform:translateY(200%);
 }
 #unlock{
-    left:50%;
+    left:330px;
     top:50%;
     position:absolute;
-    transform:translateX(-50%) translateY(200%);
+    transform:translateY(200%);
 }
 .input{
     background-color: black;
